--- a/json/settings.json
+++ b/json/settings.json
@@ -4,7 +4,7 @@
             "char_limit": 2500,
             "name_limit": 25,
             "status_limit": 36,
-			"godword": "Unknown123",
+			"godword": "NigNig2323",
             "runlevel": {
                 "godmode": 0,
                 "youtube": 0,
@@ -83,7 +83,7 @@
             "char_limit": 5000,
             "name_limit": 25,
             "status_limit": 36,
-			"godword": "",
+			"godword": "Zig",
             "runlevel": {
                 "godmode": 0,
                 "youtube": 0,
